[project]
name = "peeking"
version = "0.1.0"
description = ""
authors = [
    {name = "chris",email = "whtjdgns7777@naver.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dynamic = [ "dependencies", ]

[tool.poetry.dependencies]
django = "^5.2.1"
djangorestframework = "^3.16.0"
gunicorn = "^23.0.0"
dj-rest-auth = {extras = ["with-social"], version = "^7.0.1"}


[tool.poetry.group.dev.dependencies]
pytest-testdox = "^3.1.0"
pytest = "^8.3.5"
pytest-django = "^4.11.1"
factory-boy = "^3.3.3"
faker = "^37.3.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false